...
            "state" : "translated",
            "value" : "%1$@ %2$@"
          }
        }
      }
    },
    "add-game" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Spiel hinzufügen"
          }
...
            "state" : "translated",
            "value" : "新增遊戲"
          }
        }
      }
    },
    "add-player" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Spieler hinzufügen"
          }
...
            "state" : "translated",
            "value" : "計算你的分數"
          }
        }
      }
    },
    "cancel" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Abbrechen"
          }
...
            "state" : "translated",
            "value" : "取消"
          }
        }
      }
    },
    "create-game-button-title" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Erstellen"
          }
...
            "state" : "translated",
            "value" : "創建遊戲"
          }
        }
      }
    },
    "create-player-button-title" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Erstellen"
          }
...
            "state" : "translated",
            "value" : "玩家"
          }
        }
      }
    },
    "delete-game-right-click-action" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Spiel löschen"
          }
...
            "state" : "translated",
            "value" : "儲存變更"
          }
        }
      }
    },
    "score-round" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Erziele einen Zug"
          }
...
